--- a/assets/accordion/index.html
+++ b/assets/accordion/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
 
-  <script src="app.js" type="text/javascript"></script>
+  <script src="main.js" type="text/javascript"></script>
 </body>
 </html>
