--- a/assets/accordion/index.html
+++ b/assets/accordion/index.html
@@ -44,6 +44,6 @@
     </div>
     <hr>
   </div>
-  <script src="main.js" type="text/javascript"></script>
+  <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
