--- a/assets/accordion/index.html
+++ b/assets/accordion/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="accordion/styles.css">
 </head>
 <body>
   <div class="accordion-body">
@@ -44,6 +44,6 @@
     </div>
     <hr>
   </div>
-  <script src="app.js" type="text/javascript"></script>
+  <script src="accordion/app.js" type="text/javascript"></script>
 </body>
 </html>
